# adblock-rust

./: Cargo.toml  README.md  package.json
data/: matching-test-requests.json  regressions.tsv
data/brave/: coin-miners.txt  huhi-unbreak.txt
data/easylist.to/easylist/: easylist.txt  easyprivacy.txt
data/huhi/: huhi-unbreak.txt
data/regression-testing/: easylist.txt  easyprivacy.txt
data/test/: disconnect-simple-malware.txt  easylist.txt  easyprivacy.txt  malwaredomains.txt  spam404-main-blacklist.txt
data/uBlockOrigin/: filters.txt  unbreak.txt
examples/: generate-dat.rs  use-dat.rs
fuzz/fuzz_targets/: parse_filter.rs
native/: Cargo.toml
src/: blocker.rs  engine.rs
src/url_parser/: mod.rs
tests/: legacy_harness.rs  live.rs  ublock-coverage.rs
